endpoint rest test and reliability/consistency improvement
