# vmausers/controllers/usercontroller.go
@@ -28,8 +28,6 @@ func CheckPassword(user models.User, providedPassword string) error {
 	return nil
 }
 
-// @BasePath /api/v1
-
 // RegisterUser godoc
 // @Summary Endpoint to register a new user
 // @Schemes
@@ -38,9 +36,9 @@ func CheckPassword(user models.User, providedPassword string) error {
 // @Accept json
 // @Produce json
 // @Param user formData models.User true "User Data"
-// @Success 200 {object} user
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Success 200 {object} models.User
+// @Failure 400 {string} string "Bad request"
+// @Failure 500 {string} string "Server Error"
 // @Router /user/register [post]
 func RegisterUser(context *gin.Context) {
 	var user models.User
@@ -51,7 +49,13 @@ func RegisterUser(context *gin.Context) {
 		return
 	}
 
-	if found, err := middlewares.GetUserByEmail(user.Email); err != nil || found != nil {
+	if !models.IsEmailValid(user.Email) {
+		context.JSON(http.StatusBadRequest, gin.H{"error": "Invalid email"})
+		context.Abort()
+		return
+	}
+
+	if found, err := middlewares.GetUserByEmail(user.Email); err == nil || found != nil {
 		errMessage := "User already registered"
 		if err != nil {
 			errMessage = err.Error()
@@ -78,16 +82,6 @@ func RegisterUser(context *gin.Context) {
 	context.JSON(http.StatusCreated, gin.H{"userId": user.ID, "email": user.Email, "username": user.Email[:strings.IndexByte(user.Email, '@')]})
 }
 
-// GetUserById godoc
-// @Summary Endpoint to load an user by it's ID
-// @Schemes
-// @Description Get an user
-// @Tags user
-// @Accept json
-// @Produce json
-// @Param id path string true "User Id"
-// @Success 200 {object} models.User
-// @Failure 400 {object} httputil.HTTPError
 func GetUserById(context *gin.Context) {
 	user, err := middlewares.GetUserById(context.Param("id"))
 	if err != nil {
@@ -108,7 +102,7 @@ func GetUserById(context *gin.Context) {
 // @Produce json
 // @Param email path string true "User Email"
 // @Success 200 {object} models.User
-// @Failure 400 {object} httputil.HTTPError
+// @Failure 400 {string} string "Bad request"
 // @Router /secured/user/{email} [get]
 func GetUserByEmail(context *gin.Context) {
 	user, err := middlewares.GetUserByEmail(context.Param("email"))
@@ -128,8 +122,8 @@ func GetUserByEmail(context *gin.Context) {
 // @Tags user
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.User
-// @Failure 400 {object} httputil.HTTPError
+// @Success 200 {array} models.User
+// @Failure 400 {string} string "Bad request"
 // @Router /secured/user [get]
 func GetManyUsers(context *gin.Context) {
 	usersList, err := middlewares.GetManyUsers()
@@ -151,7 +145,7 @@ func GetManyUsers(context *gin.Context) {
 // @Produce json
 // @Param user formData models.User true "User Data"
 // @Success 200 {object} models.User
-// @Failure 204 {object} httputil.HTTPError
+// @Failure 204 {string} string "No Content"
 // @Router /secured/user/update [put]
 func UpdateUser(context *gin.Context) {
 	var user models.User
@@ -171,7 +165,7 @@ func UpdateUser(context *gin.Context) {
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"user": user})
+	context.JSON(http.StatusOK, gin.H{"user": currUser})
 }
 
 // UpdateUserPassword godoc
@@ -184,7 +178,7 @@ func UpdateUser(context *gin.Context) {
 // @Param email query string true "User email"
 // @Param password query string true "User password"
 // @Success 200
-// @Failure 400 {object} httputil.HTTPError
+// @Failure 400 {string} string "Bad request"
 // @Router /secured/user/update/password [put]
 func UpdateUserPassword(context *gin.Context) {
 	user, err := middlewares.GetUserByEmail(context.Query("email"))
@@ -219,8 +213,8 @@ func UpdateUserPassword(context *gin.Context) {
 // @Produce json
 // @Param email query string true "User email"
 // @Param newemail query string true "User newemail"
-// @Success 200 {string} user
-// @Failure 400 {object} httputil.HTTPError
+// @Success 200 {object} models.User
+// @Failure 400 {string} string "Bad request"
 // @Router /secured/user/update/email [put]
 func UpdateUserEmail(context *gin.Context) {
 	user, err := middlewares.GetUserByEmail(context.Query("email"))
@@ -255,7 +249,7 @@ func UpdateUserEmail(context *gin.Context) {
 // @Produce json
 // @Param id path string true "User Id"
 // @Success 200
-// @Failure 400 {object} httputil.HTTPError
+// @Failure 400 {string} string "Bad request"
 // @Router /secured/user/{id} [delete]
 func DeleteUserById(context *gin.Context) {
 	err := middlewares.DeleteUserById(context.Param("id"))
@@ -277,7 +271,7 @@ func DeleteUserById(context *gin.Context) {
 // @Produce json
 // @Param email path string true "User Data"
 // @Success 200
-// @Failure 400 {object} httputil.HTTPError
+// @Failure 400 {string} string "Bad request"
 // @Router /user/register [delete]
 func DeleteUserByEmail(context *gin.Context) {
 	err := middlewares.DeleteUserByEmail(context.Param("email"))
